style.css
@import "./styles/dashboard.css";
@import "./styles/tasks.css";
@import "./styles/board.css";

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  display: block;
}

:root {
  --BG-COLOR: #011627;
  --FG-COLOR: #f5f5f5;
  --RED-CONTRAST-COLOR: #ff5964;
  --LIGHT-GRAY-COLOR: #c4c4c4;
  --GRAY-COLOR: #9a9898;

  --BORDER: 1px solid var(--FG-COLOR);
}

.nowrap {
  white-space: nowrap;
}

.header-block {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 15px;
  padding-block: 0.5rem;
  padding-inline: 0.75rem;
  border: var(--BORDER);
  gap: 0.25rem;
  font-size: 0.75rem;
  color: var(--FG-COLOR);
  height: 2rem;
}

.block {
  border-radius: 15px;
  padding: 0.75rem;
  border: var(--BORDER);
}

.block-title {
  font-weight: 500;
  margin-bottom: 0.25rem;
}

.page {
  background-color: var(--BG-COLOR);
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  min-height: 100vh;
  font-family: "Outfit", sans-serif;
  padding-bottom: 1.5rem;
}

.sidebar {
  display: none;
}

.header {
  display: flex;
  justify-content: space-between;
  padding-top: 0.5rem;
  padding-inline: 0.5rem;
  grid-area: header;
  justify-self: center;
  width: 100%;
  max-width: 82rem;
  gap: 1rem;
}

.header__left {
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-start;
}

.header__right {
  flex: 1;
  display: flex;
  gap: 0.5rem;
  justify-content: flex-end;
}

.nav {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex: 1;
  max-width: fit-content;
}

.search__icon {
  color: var(--FG-COLOR);
}

.search__input {
  display: none;
}

.new-task-button {
  background: none;
}

.new-task-button:hover {
  cursor: pointer;
}

.new-task-button__text {
  display: none;
}

.mobile-corner {
  display: flex;
  align-items: center;
  justify-content: flex-start;
  color: var(--FG-COLOR);
  gap: 0.25rem;
}

.title {
  display: flex;
  justify-content: center;
}

.main {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  padding-inline: 0.5rem;
  grid-area: main;
  justify-self: center;
  width: 100%;
  max-width: 82rem;
  color: var(--FG-COLOR);
}

@media screen and (min-width: 426px) {
  .search__input {
    background-color: var(--BG-COLOR);
    color: var(--FG-COLOR);
    display: block;
    border: none;
    outline: none;
    max-width: 7rem;
  }
}

@media screen and (min-width: 592px) {
  .search__input {
    max-width: none;
  }

  .new-task-button__text {
    display: block;
  }
}

@media screen and (min-width: 769px) {
  .header__right {
    align-items: center;
  }
}

@media screen and (min-width: 1025px) {
  .page {
    display: grid;
    grid-template-areas:
      "sidebar header "
      "sidebar main"
      "sidebar footer";
    grid-template-rows: 5rem min-content min-content;
    grid-template-columns: 15rem 1fr 0;
    gap: 1.5rem;
  }

  .header__left {
    display: none;
  }

  .header__right {
    justify-content: flex-start;
  }

  .sidebar {
    display: grid;
    grid-template-rows: 5rem 1fr;
    grid-template-columns: 1fr;
    gap: 1.5rem;
    padding-left: 1.5rem;
    border-right: var(--BORDER);
    color: var(--FG-COLOR);
    position: fixed;
    height: 100%;
    width: 15rem;
    grid-area: sidebar;
  }

  .user-info {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 0.25rem;
    grid-row: 1 /2;
  }

  .user-info__icon {
    border: var(--BORDER);
    border-radius: 50%;
    display: flex;
    align-items: center;
    justify-content: center;
    height: 2.5rem;
    width: 2.5rem;
  }

  .user-info__position {
    color: var(--GRAY-COLOR);
  }

  .sidebar__links {
    display: flex;
    gap: 1rem;
    flex-direction: column;
    grid-row: 2 / 3;
  }

  .sidebar__link {
    font-size: 1.25rem;
    font-weight: 300;
    text-decoration: none;
    color: var(--FG-COLOR);
  }

  .sidebar__link:hover {
    color: var(--RED-CONTRAST-COLOR);
  }

  .sidebar__link--chosen {
    color: var(--RED-CONTRAST-COLOR);
  }

  .sidebar__link:hover {
    cursor: pointer;
  }

  .mobile-corner {
    display: none;
  }

  .title {
    justify-content: flex-start;
  }
}

